examples/test/testpolicy6004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6004
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key19: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key33: value48
          key30: value10
      podSelector:
        matchLabels:
          key7: value30
